--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # flutter_localizations:
+  #   sdk: flutter
+  # intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   email_validator: ^3.0.0
   intl_phone_field: ^3.2.0
+  firebase_auth: ^5.5.1
+  firebase_core: ^3.12.1
+  firebase_database: ^11.3.4
+  firebase_storage: ^12.4.4
+  firebase_messaging: ^15.2.4
+  fluttertoast: ^8.2.12
+  shared_preferences: ^2.5.3
+  flutter_localization: ^0.3.2
+  provider: ^6.1.4
+  intl:
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +68,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -63,6 +79,7 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
