--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dependencies:
   path_provider: ^2.1.1
   audioplayers: ^5.2.1
   flutter_sound: ^9.30.0
+  pdf: ^3.11.1
+  printing: ^5.13.3
   flutter_web_plugins:
     sdk: flutter
 
@@ -100,6 +102,15 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/pickup-removebg-preview.png
+    - assets/images/dumper.png
+    - assets/images/vc.png
+    - assets/images/container.png
+    - assets/images/reefe.png
+    - assets/images/shehzore.png
+    - assets/images/flatbed.png
+    - assets/images/loader.png
+    - assets/images/close.png
   #   - images/a_dot_ham.jpeg
 
 
